# daceypy

./: .flake8  .gitignore  NOTICE  README.md  setup.cfg
daceypy/: DA_utils.py  RK.py  _ADS.py  _ADSintegrator.py  _DA.py  _DACEException.py  _Monomial.py  _PrettyType.py  __init__.py  __init__.py.bak  _array.py  _compiledDA.py  _integrator.py  core.py  get_platform.py  op.py  op.pyi
daceypy/lib/: README.md  dace_darwin-arm64.dylib  dace_darwin-x86_64.dylib  dace_darwin64.dylib
docs/: basic_example.ipynb  basic_example.py  differences.md  index.md
docs/ADS/: 1Basics-Ex.py  2Advanced-Ex.py  3OnlineADS-Ex.py  README.md  daceypy_import_helper.py
docs/Tutorials/: README.md
docs/Tutorials/Tutorial1/: Example1.py  Example10.py  Example11DA.py  Example11DARK78.py  Example11DARK78.py.bak  Example11Pointwise.py  Example11timeDAintegrator.py  Example12.py  Example2.py  Example3.py  Example4.py  Example5.py  Example6.py  Example7.py  Example8.py  Example9.py  daceypy_import_helper.py
docs/Tutorials/Tutorial2/: .gitignore  1Basics-Ex.py  2IntDiff-Ex.py  3Evaluation-Ex.py  4Solver-Ex.py  5Vectors-Ex.py  6Integrator-Ex.py  7PID-Ex.py  8ADS-Ex.py  8ADSBasic-Ex.py  daceypy_import_helper.py
