[metadata]
name = daceypy
version = attr: daceypy._version.__version__
author = Giovanni Purpura
description = Python wrapper of DACE, the Differential Algebra Computational Toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giovannipurpura/daceypy
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X

[options]
packages = daceypy
python_requires = >=3.7
install_requires =
    numpy>=1.20.0

[options.package_data]
daceypy = lib/*.so, lib/*.dylib, lib/*.dll
